--- a/index.html
+++ b/index.html
@@ -5,8 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>G-3 Arcitects</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <h1>this is new</h1>
+    <!-- header start -->
+    <header>
+
+    </header>
+    <!-- header end -->
+    <main>
+        <section class="container">
+            <div>
+                <h3 class="company-name">G3 Architects</h3>
+            </div>
+            <div>
+                <ul class="nav-bar">
+                    <li>Home</li>
+                    <li>About</li>
+                    <li>Contact Us</li>
+                    <li>Login</li>
+                </ul>
+            </div>
+            
+        </section>
+    </main>
 </body>
 </html>
