--- a/index.html
+++ b/index.html
@@ -10,24 +10,49 @@
 <body>
     <!-- header start -->
     <header>
-
-    </header>
-    <!-- header end -->
-    <main>
         <section class="container">
             <div>
                 <h3 class="company-name">G3 Architects</h3>
             </div>
             <div>
-                <ul class="nav-bar">
-                    <li>Home</li>
-                    <li>About</li>
-                    <li>Contact Us</li>
-                    <li>Login</li>
-                </ul>
+                <nav>
+                    <ul>
+                        <li>Home</li>
+                        <li>About</li>
+                        <li>Contact Us</li>
+                        <li>Login</li>
+                    </ul>
+                </nav>
             </div>
-            
         </section>
+        <div class="title">
+            <h3 class="company-name">Brand New <br>
+                Group of Architects</h2>
+                <p class="description">There are many variations of passages of Lorem Ipsum
+                     available, but the majority have suffered alteration in <br>
+                     some form, by injected humour, or
+                      randomised words which don't look even</p>
+                      <button class="explore-more">Explore More</button>
+                      <img class="banner" src="images/banner.png" alt="">
+        </div>
+    </header>
+    <!-- header end -->
+
+    <!-- main start  -->
+    <main>
+        <section class="featire-container">
+            <div class="fretures">
+                <img class="feature-image" src="images/team1.png" alt="">
+                <img class="feature-image" src="images/team2.png" alt="">
+                <img class="feature-image" src="images/team3.png" alt="">
+                <img class="feature-image" src="images/team4.png" alt="">
+            </div>
+            <div class="quick-features">
+                <h3> <span class="quick"> Quick list </span> of Our <br><span class="fe">Features</span> </h3>
+            </div>
+        </section>
+        
     </main>
+    <!-- main end -->
 </body>
 </html>
